--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ highlighter: rouge
 # Site settings
 title: "Dream&Smile"
 description: > # this means to ignore newlines until "email:"
-   Stay hungry，stay foolish
+   Anyway, life is elsewhere and we all know it.
 
 email: uestc_dpz@163.com
 # blog logo
