--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author_image: "/assets/images/avatar.jpg"
 # paginate:	4
 paginate:	4
 
-url: "https://uestc-dpz.github.io/blog_demo/" # the base hostname & protocol for your site
+url: "https://uestc-dpz.github.io" # the base hostname & protocol for your site
 baseurl: ""
 
 # social icons and sharing options
