--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 highlighter: rouge
 
 # Site settings
-title: "Dream&Smile"
+title: "Nie&Gao"
 description: > # this means to ignore newlines until "email:"
    Anyway, life is elsewhere and we all know it.
 
@@ -19,8 +19,8 @@ cover_slide: "/assets/images/cover-slide.jpg"
 cover_archive: "/assets/images/cover-archive.jpg"
 
 
-name: 'Dream&Smile'
-author: 'Dream&Smile'
+name: 'Nie&Gao'
+author: 'Nie&Gao'
 author_image: "/assets/images/avatar.jpg"
 
 # paginate:	4
