change the name

--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 highlighter: rouge
 
 # Site settings
-title: "Dream&Smile"
+title: "Nie&Gao"
 description: > # this means to ignore newlines until "email:"
    Anyway, life is elsewhere and we all know it.
 
-email: uestc_dpz@163.com
+email: niexiao@hotmail.com
 # blog logo
 logo: "/assets/images/avatar.jpg"
 # blog cover
