remove useless file

--- a/_drafts/.Ulysses-Group.plist
+++ b/_drafts/.Ulysses-Group.plist
@@ -10,6 +10,50 @@
 		<dict/>
 		<key>sheetClusters</key>
 		<dict>
+			<key>2016-09-25-template.md</key>
+			<dict>
+				<key>lastModification</key>
+				<real>498899578.63840002</real>
+				<key>version</key>
+				<dict>
+					<key>e7326b8a7484d78f1a6ce59184bb51c231784e6efb82e95522a6f62f2fa3b504</key>
+					<integer>15</integer>
+				</dict>
+			</dict>
+			<key>2016-10-17-JVM调试工具入门.md</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>498898211.97999698</real>
+				<key>lastModification</key>
+				<real>498899578.63840097</real>
+				<key>version</key>
+				<dict>
+					<key>e7326b8a7484d78f1a6ce59184bb51c231784e6efb82e95522a6f62f2fa3b504</key>
+					<integer>15</integer>
+				</dict>
+			</dict>
+			<key>无标题 - 2.md</key>
+			<dict>
+				<key>lastModification</key>
+				<real>498899579.79903102</real>
+				<key>version</key>
+				<dict>
+					<key>e7326b8a7484d78f1a6ce59184bb51c231784e6efb82e95522a6f62f2fa3b504</key>
+					<integer>17</integer>
+				</dict>
+			</dict>
+			<key>无标题.md</key>
+			<dict>
+				<key>lastModification</key>
+				<real>498899578.63839602</real>
+				<key>version</key>
+				<dict>
+					<key>e7326b8a7484d78f1a6ce59184bb51c231784e6efb82e95522a6f62f2fa3b504</key>
+					<integer>15</integer>
+				</dict>
+			</dict>
 			<key>解读基金.md</key>
 			<dict>
 				<key>lastModification</key>
@@ -25,7 +69,19 @@
 	<key>sheetClusters</key>
 	<array>
 		<array>
+			<string>无标题.md</string>
+		</array>
+		<array>
+			<string>无标题 - 2.md</string>
+		</array>
+		<array>
 			<string>解读基金.md</string>
+		</array>
+		<array>
+			<string>2016-09-25-template.md</string>
+		</array>
+		<array>
+			<string>2016-10-17-JVM调试工具入门.md</string>
 		</array>
 	</array>
 	<key>storeFormatVersion</key>
@@ -40,7 +96,7 @@
 		<key>sheetClusters</key>
 		<dict>
 			<key>e7326b8a7484d78f1a6ce59184bb51c231784e6efb82e95522a6f62f2fa3b504</key>
-			<integer>13</integer>
+			<integer>17</integer>
 		</dict>
 	</dict>
 </dict>
